# molt-shield

./: .dockerignore  .gitignore  Dockerfile.dev  Dockerfile.prod  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  sample_input.xml
compose/: docker-compose.prod.yml  docker-compose.yml
config/: default.yaml  security.yaml
docs/: ARCHITECTURE.md  SECURITY.md
notebooks/: batch_processing_pipeline.ipynb  cicd_github_actions.ipynb  custom_policies_workshop.ipynb  fastapi_integration.ipynb  molt_shield_demo.ipynb  molt_shield_llm_demo.ipynb
scripts/: entrypoint.sh  run_tests.sh  swarm-manager.sh  verify_isolation.sh
src/: __init__.py  cli.py  config.py  gatekeeper.py  policy_engine.py  security.py  server.py  vault.py
tests/: conftest.py
tests/fixtures/: policy_test.json  sample.xml
tests/integration/: test_leakage.py  test_mcp_protocol.py
tests/security/: test_data_masking.py  test_isolation.py  test_network_boundary.py
tests/unit/: test_masking.py  test_policy.py  test_shuffling.py
